[package]
name = "checker"
version = "0.1.0"
authors = ["Vladislav <vladislav.oleshko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="*", features=["yaml"]}

indicatif="*"
console="*"

difference = "2.0"

num_cpus = "1.0"
two-lock-queue="*"